# Game

./: README.md  plugin.c
game/: Cargo.toml
game/src/: main.rs  state.rs
plugin_lib/: Cargo.toml
plugin_lib/src/: ffi_types.rs  lib.rs
plugin_lib_proc/: Cargo.toml
plugin_lib_proc/src/: lib.rs
test_mod/: Cargo.toml  expanded.rs
test_mod/src/: lib.rs
