[package]
name = "plugin_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concat-idents = "1.1.4"
libloading = "0.8.0"
plugin_lib_proc = { version = "0.1.0", path = "../plugin_lib_proc" }

[features]
default = ["game", "plugin"]
game = []
plugin = []
